Evento listar, detalle y comprar

--- a/src/app/component/cuenta/inicio/inicio.component.html
+++ b/src/app/component/cuenta/inicio/inicio.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid vh-100 bg-home">
+<div class="container-fluid bg-home">
   <app-menu-admin></app-menu-admin>
   <div class="container">
     <div class="row gy-4 mt-2">
