--- a/src/app/component/inicio-sesion/loguearse/loguearse.component.html
+++ b/src/app/component/inicio-sesion/loguearse/loguearse.component.html
@@ -3,17 +3,20 @@
 >
   <div class="cover-up position-absolute w-100 h-100"></div>
   <div class="row w-100 h-100 position-relative">
-    <!-- Columna izquierda: Login form -->
     <div
       class="col-12 col-md-6 d-flex align-items-center justify-content-center"
     >
       <div class="login-container bg-light p-4 rounded-4 shadow w-75">
         <h2 class="text-center mb-4">Iniciar Sesión</h2>
 
-        <form class="p-3">
+        <div class="p-3">
           <mat-form-field appearance="fill" class="w-100 mb-3">
             <mat-label>Nombre</mat-label>
-            <input matInput placeholder="Ingresa tu nombre" />
+            <input
+              matInput
+              placeholder="Ingresa tu nombre"
+              [(ngModel)]="user.username"
+            />
           </mat-form-field>
 
           <mat-form-field appearance="fill" class="w-100 mb-3">
@@ -22,6 +25,7 @@
               matInput
               type="password"
               placeholder="Ingresa tu contraseña"
+              [(ngModel)]="user.password"
             />
           </mat-form-field>
 
@@ -35,6 +39,7 @@
             mat-raised-button
             color="primary"
             class="w-100 mb-2 bg-login-btn"
+            (click)="onLogin()"
           >
             INICIAR
           </button>
@@ -42,7 +47,7 @@
           <button mat-raised-button class="w-100 bg-login-btn">
             REGÍSTRATE
           </button>
-        </form>
+        </div>
       </div>
     </div>
 
