--- a/src/app/component/shared/table/table.component.html
+++ b/src/app/component/shared/table/table.component.html
@@ -19,7 +19,7 @@
 
     <ng-container *ngIf="showActions" matColumnDef="acciones">
       <th mat-header-cell *matHeaderCellDef>Acciones</th>
-      <td mat-cell *matCellDef="let element" class="d-flex justify-content-center">
+      <td mat-cell *matCellDef="let element" class="d-flex justify-content-center gap-2">
         <ng-container>
           <button mat-icon-button (click)="edit(element.id)">
             <mat-icon>edit</mat-icon>
