Gestion de promotor, sponsor y expositor

--- a/src/app/component/gestion/event-create/event-create.component.html
+++ b/src/app/component/gestion/event-create/event-create.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid bg-home">
   <app-menu-admin></app-menu-admin>
   <div class="container">
-    <h4 class="mb-3">Actualizar evento</h4>
+    <h4 class="mb-3">Crear evento</h4>
     <div class="form-container">
       <form [formGroup]="eventForm" (ngSubmit)="save()" class="form-grid">
         <div class="row">
