Cuenta, entradas, eventos, transacciones

--- a/src/app/component/cuenta/inicio/inicio.component.html
+++ b/src/app/component/cuenta/inicio/inicio.component.html
@@ -59,7 +59,11 @@
               Mira los últimos eventos culturales de diferentes índoles para
               amantes del arte como tú
             </p>
-            <button class="btn btn-dark custom-button">Ingresar</button>
+            <a
+              [routerLink]="['/events/list']"
+              class="btn btn-dark custom-button"
+              >Ingresar</a
+            >
           </div>
         </div>
       </div>
