--- a/src/app/component/shared/menu-admin/menu-admin.component.html
+++ b/src/app/component/shared/menu-admin/menu-admin.component.html
@@ -1,4 +1,6 @@
-<header class="d-flex justify-content-between align-items-center px-4 py-3 header">
+<header
+  class="d-flex justify-content-between align-items-center px-4 py-3 header"
+>
   <div class="text-center flex-fill">
     <h5 class="m-0 fw-bold aurea-title">AUREA CULTURA</h5>
   </div>
@@ -8,12 +10,25 @@
   </button>
 
   <mat-menu #menu="matMenu" class="custom-menu">
-    <button mat-menu-item>Mi Perfil</button>
-    <button mat-menu-item>Actualizar</button>
-    <button mat-menu-item>Mis favoritos</button>
-    <button mat-menu-item>Mis transacciones</button>
-    <button mat-menu-item>Mis Entradas</button>
-    <button mat-menu-item>Reportar</button>
-    <button mat-menu-item>Cerrar Sesión</button>
+    @if(isAdmin){
+    <a [routerLink]="['/admin/city-list']" mat-menu-item>Ciudades</a>
+    <a [routerLink]="['/admin/promotor-list']" mat-menu-item>Promotores</a>
+    <a [routerLink]="['/admin/event-list']" mat-menu-item>Eventos</a>
+    <a [routerLink]="['/admin/expositor-list']" mat-menu-item>Expositores</a>
+    <a [routerLink]="['/admin/sponsor-list']" mat-menu-item>Sponsors</a>
+    <a [routerLink]="['/admin/eventtype-list']" mat-menu-item
+      >Tipos de evento</a
+    >
+    <a [routerLink]="['/admin/tickettype-list']" mat-menu-item
+      >Tipos de tickets</a
+    >
+    } @else {
+    <a [routerLink]="['/home']" mat-menu-item>Inicio</a>
+    <a [routerLink]="['/tickets']" mat-menu-item>Mis Entradas</a>
+    <a [routerLink]="['/transactions']" mat-menu-item>Mis Transacciones</a>
+    <a [routerLink]="['/events/favorites']" mat-menu-item>Eventos favoritos</a>
+    <a [routerLink]="['/events/list']" mat-menu-item>Eventos</a>
+    }
+    <a mat-menu-item (click)="logOut()">Cerrar Sesión</a>
   </mat-menu>
 </header>
