--- a/src/app/component/cuenta/entradas/entradas.component.html
+++ b/src/app/component/cuenta/entradas/entradas.component.html
@@ -1,34 +1,15 @@
 <div class="container-fluid bg-home">
   <app-menu-admin></app-menu-admin>
-  <div class="container py-4">
-    <h4 class="mb-4">Mis Entradas Compradas</h4>
-    <!-- Tabla de precios -->
-    <div class="col-10 mx-auto">
-      <table mat-table [dataSource]="entradas" class="mat-elevation-z2 mx-auto">
-        <ng-container matColumnDef="Codigo">
-          <th mat-header-cell *matHeaderCellDef class="bg-dark text-white">
-            Codigo
-          </th>
-          <td mat-cell *matCellDef="let element">{{ element.Codigo }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="PrecioCompra">
-          <th mat-header-cell *matHeaderCellDef class="bg-dark text-white">
-            Precio de Compra
-          </th>
-          <td mat-cell *matCellDef="let element">{{ element.PrecioCompra }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="Fecha">
-          <th mat-header-cell *matHeaderCellDef class="bg-dark text-white">
-            Fecha
-          </th>
-          <td mat-cell *matCellDef="let element">{{ element.Fecha }}</td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
+  <div class="container">
+    <div class="row">
+      <div class="col-8">
+        <h3 class="mb-4">Entradas compradas</h3>
+      </div>
     </div>
+    <app-table
+      [columns]="columns"
+      [data]="tickets"
+      [showActions]="false"
+    ></app-table>
   </div>
 </div>
