--- a/src/app/component/cuenta/evento-detalle/evento-detalle.component.html
+++ b/src/app/component/cuenta/evento-detalle/evento-detalle.component.html
@@ -3,68 +3,55 @@
   <div class="container py-4">
     <div class="d-flex flex-column align-items-center mb-4 gap-4">
       <img
-        src="assets/images/eventos.png"
+        [src]="eventService.getImage(ticket.image)"
+        onerror="this.onerror=null;this.src='assets/images/img_not_found.jpg';"
         class="img-fluid rounded-4 mb-3 mb-md-0 me-md-4"
         style="width: 240px; height: 240px; object-fit: cover"
       />
       <div class="d-flex flex-column flex-md-row align-items-center">
         <div>
-          <div class="fw-bold">Marzo</div>
-          <div class="display-6 fw-bold">28</div>
+          <div class="fw-bold text-center">
+            {{ ticket.startDate | date : "LLL" }}
+          </div>
+          <div class="display-6 fw-bold">
+            {{ ticket.startDate | date : "d" }}
+          </div>
         </div>
 
         <div class="ms-md-4">
           <h5 class="fw-bold mb-1">
-            Sara Flores. Non Nete. Un sueño para una nación indígena
+            {{ ticket.name }}
           </h5>
-          <small>Reserve su entrada a esta exposición</small>
+          <small>{{ ticket.descripcion }}</small>
         </div>
       </div>
     </div>
 
     <!-- Tabla de precios -->
     <div class="col-12 col-md-8 mx-auto">
-      <table
-        mat-table
-        [dataSource]="entradas"
-        class="mat-elevation-z2 mx-auto"
-      >
-        <ng-container matColumnDef="nombre">
-          <th mat-header-cell *matHeaderCellDef class="bg-dark text-white">
-            Nombre
-          </th>
-          <td mat-cell *matCellDef="let element">{{ element.nombre }}</td>
-        </ng-container>
+      <app-table
+        [columns]="columns"
+        [data]="tickets"
+        [showActions]="false"
+        [showSearch]="false"
+        [showPaginate]="false"
+      ></app-table>
 
-        <ng-container matColumnDef="precio">
-          <th mat-header-cell *matHeaderCellDef class="bg-dark text-white">
-            Precio
-          </th>
-          <td mat-cell *matCellDef="let element">{{ element.precio }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="inicio">
-          <th mat-header-cell *matHeaderCellDef class="bg-dark text-white">
-            Fecha Inicio
-          </th>
-          <td mat-cell *matCellDef="let element">{{ element.inicio }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="fin">
-          <th mat-header-cell *matHeaderCellDef class="bg-dark text-white">
-            Fecha Fin
-          </th>
-          <td mat-cell *matCellDef="let element">{{ element.fin }}</td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
-      <div class="text-end mt-4">
+      <div class="d-flex justify-content-end gap-3">
+        <button
+          type="button"
+          mat-flat-button
+          color="primary"
+          class="btn custom-dark-button text-white"
+          (click)="cancel()"
+        >
+          Cancelar
+        </button>
         <button
           mat-raised-button
           color="primary"
           class="custom-dark-button text-white px-4"
+          (click)="buy()"
         >
           Seleccionar
         </button>
