--- a/src/app/component/cuenta/evento-listar/evento-listar.component.html
+++ b/src/app/component/cuenta/evento-listar/evento-listar.component.html
@@ -3,7 +3,7 @@
   <div class="container py-4">
     <!-- Filtros -->
     <div class="d-flex align-items-center mb-4 gap-3">
-      <button mat-icon-button>
+      <button mat-icon-button (click)="back()">
         <mat-icon class="mb-2">arrow_back</mat-icon>
       </button>
       <div class="d-flex flex-wrap align-items-center gap-2">
@@ -48,12 +48,16 @@
 
     <!-- Grid de eventos -->
     <div class="row g-4">
-      <div class="col-md-4" *ngFor="let evento of eventos">
+      <div
+        class="col-md-4"
+        *ngFor="let evento of eventos.slice(0, visibleCount)"
+      >
         <div
           class="border rounded-3 h-100 d-flex flex-column overflow-hidden shadow-sm"
         >
           <img
-            [src]="evento.imagen"
+            [src]="eventService.getImage(evento.image)"
+            onerror="this.onerror=null;this.src='assets/images/img_not_found.jpg';"
             alt="evento"
             class="img-fluid"
             style="aspect-ratio: 16/9; object-fit: cover"
@@ -62,13 +66,16 @@
             class="info-box p-3 flex-grow-1 d-flex flex-column justify-content-between"
           >
             <div>
-              <div class="fw-semibold small">{{ evento.fecha }}</div>
-              <div class="small text-muted mb-3">{{ evento.titulo }}</div>
+              <div class="fw-semibold small">
+                {{ evento.startDate | date : "d 'de' MMMM" : "" : "es-ES" }}
+              </div>
+              <div class="small text-muted mb-3">{{ evento.nombre }}</div>
             </div>
             <div class="d-flex justify-content-end">
               <button
                 mat-raised-button
                 class="btn custom-dark-button btn-sm align-self-start mt-auto"
+                (click)="buy(evento.id)"
               >
                 Comprar
               </button>
@@ -78,7 +85,7 @@
       </div>
     </div>
 
-    <!-- Botón Más -->
+    @if(eventos.length > 6){
     <div class="text-center mt-4">
       <button
         mat-raised-button
@@ -88,5 +95,6 @@
         Mas
       </button>
     </div>
+    }
   </div>
 </div>
