--- a/src/app/component/shared/table/table.component.html
+++ b/src/app/component/shared/table/table.component.html
@@ -1,8 +1,10 @@
 <div class="container mt-4">
+  @if(showSearch){
   <mat-form-field appearance="outline" class="w-100 mb-3">
     <mat-label>Buscar</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="" />
   </mat-form-field>
+  }
 
   <table
     mat-table
@@ -19,7 +21,11 @@
 
     <ng-container *ngIf="showActions" matColumnDef="acciones">
       <th mat-header-cell *matHeaderCellDef>Acciones</th>
-      <td mat-cell *matCellDef="let element" class="d-flex justify-content-center gap-2">
+      <td
+        mat-cell
+        *matCellDef="let element"
+        class="d-flex justify-content-center gap-2"
+      >
         <ng-container>
           <button mat-icon-button (click)="edit(element.id)">
             <mat-icon>edit</mat-icon>
@@ -35,8 +41,10 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 
+  @if(showPaginate){
   <mat-paginator
     [pageSizeOptions]="[5, 10, 25]"
     showFirstLastButtons
   ></mat-paginator>
+  }
 </div>
