intereses, ticket comprados

--- a/src/app/component/cuenta/inicio/inicio.component.html
+++ b/src/app/component/cuenta/inicio/inicio.component.html
@@ -38,7 +38,9 @@
             <p class="text-center w-50 mx-auto">
               Menciónanos qué te gustaría ver o tus intereses y preferencias.
             </p>
-            <button class="btn btn-dark custom-button">Ingresar</button>
+            <a [routerLink]="['/interests']" class="btn btn-dark custom-button"
+              >Ingresar</a
+            >
           </div>
         </div>
       </div>
