--- a/src/app/component/shared/menu-admin/menu-admin.component.html
+++ b/src/app/component/shared/menu-admin/menu-admin.component.html
@@ -23,6 +23,7 @@
       >Tipos de tickets</a
     >
     } @else {
+    <a [routerLink]="['/user/update']" mat-menu-item>Actualizar datos</a>
     <a [routerLink]="['/home']" mat-menu-item>Inicio</a>
     <a [routerLink]="['/tickets']" mat-menu-item>Mis Entradas</a>
     <a [routerLink]="['/transactions']" mat-menu-item>Mis Transacciones</a>
