--- a/src/app/component/cuenta/inicio/inicio.component.html
+++ b/src/app/component/cuenta/inicio/inicio.component.html
@@ -18,7 +18,7 @@
               Estos datos serán utilizados para brindarle un perfil mucho más
               detallado y personalizado
             </p>
-            <button class="btn btn-dark custom-button">Ingresar</button>
+            <a [routerLink]="['/user/update']" class="btn btn-dark custom-button">Ingresar</a>
           </div>
         </div>
       </div>
