--- a/src/app/component/inicio-sesion/registrarse/registrarse.component.html
+++ b/src/app/component/inicio-sesion/registrarse/registrarse.component.html
@@ -12,29 +12,84 @@
         <form class="p-3">
           <mat-form-field appearance="fill" class="w-100 mb-3">
             <mat-label>Nombre</mat-label>
-            <input matInput placeholder="Ingresa tu nombre" />
+            <input
+              matInput
+              placeholder="Ingresa tu nombre"
+              [(ngModel)]="user.firstName"
+              name="firstName"
+            />
           </mat-form-field>
 
           <mat-form-field appearance="fill" class="w-100 mb-3">
             <mat-label>Apellido</mat-label>
-            <input matInput placeholder="Ingresa tu apellido" />
+            <input
+              matInput
+              placeholder="Ingresa tu apellido"
+              [(ngModel)]="user.lastName"
+              name="lastName"
+            />
           </mat-form-field>
           <mat-form-field appearance="fill" class="w-100 mb-3">
             <mat-label>DNI</mat-label>
-            <input matInput placeholder="Ingresa tu documento" />
+            <input
+              matInput
+              placeholder="Ingresa tu documento"
+              [(ngModel)]="user.dni"
+              name="dni"
+            />
           </mat-form-field>
           <mat-form-field appearance="fill" class="w-100 mb-3">
             <mat-label>Teléfono</mat-label>
-            <input matInput placeholder="Ingresa tu teléfono" />
+            <input
+              matInput
+              placeholder="Ingresa tu teléfono"
+              [(ngModel)]="user.phone"
+              name="phone"
+            />
           </mat-form-field>
-
+          <mat-form-field appearance="fill" class="w-100">
+            <mat-label>Género</mat-label>
+            <mat-select [(ngModel)]="user.gender" name="gender">
+              <mat-option value="masculino"> masculino </mat-option>
+              <mat-option value="femenino"> femenino </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field appearance="fill" class="w-100 mb-3">
+            <mat-label>Username</mat-label>
+            <input
+              matInput
+              placeholder="Ingresa tu teléfono"
+              [(ngModel)]="user.username"
+              name="username"
+            />
+          </mat-form-field>
+          <mat-form-field appearance="fill" class="w-100 mb-3">
+            <mat-label>Password</mat-label>
+            <input
+              matInput
+              type="password"
+              placeholder="Ingresa tu teléfono"
+              [(ngModel)]="user.password"
+              name="password"
+            />
+          </mat-form-field>
           <button
+            type="button"
             mat-raised-button
             color="primary"
             class="w-100 mb-2 bg-login-btn"
+            (click)="register()"
           >
             REGISTRARSE
           </button>
+          <a
+            mat-raised-button
+            color="primary"
+            class="w-100 mb-2 bg-login-btn"
+            [routerLink]="['/login']"
+          >
+            Login
+          </a>
         </form>
       </div>
     </div>
