--- a/src/app/component/shared/table/table.component.html
+++ b/src/app/component/shared/table/table.component.html
@@ -37,6 +37,21 @@
       </td>
     </ng-container>
 
+    <ng-container *ngIf="showSelect" matColumnDef="select">
+      <th mat-header-cell *matHeaderCellDef>Seleccionar</th>
+      <td
+        mat-cell
+        *matCellDef="let element"
+        class="d-flex justify-content-center gap-2"
+      >
+        <ng-container>
+          <button class="custom-dark-button" (click)="edit(element.id)">
+            Seleccionar
+          </button>
+        </ng-container>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
