--- a/src/app/component/cuenta/evento-listar/evento-listar.component.html
+++ b/src/app/component/cuenta/evento-listar/evento-listar.component.html
@@ -8,13 +8,6 @@
       </button>
       <div class="d-flex flex-wrap align-items-center gap-2">
         <span class="fw-semibold me-2">Filtros:</span>
-        <!-- <button
-          mat-button
-          color="primary"
-          class="btn filter-button btn-sm rounded-pill text-white"
-        >
-          Tipo
-        </button> -->
         <div class="container">
           <div class="row">
             <div class="col-12 col-md-4">
@@ -89,38 +82,9 @@
             </div>
           </div>
         </div>
-        <!-- <button
-          mat-button
-          color="primary"
-          class="btn filter-button btn-sm rounded-pill text-white"
-        >
-          Promotor
-        </button>
-        <button
-          mat-button
-          color="primary"
-          class="btn filter-button btn-sm rounded-pill text-white"
-        >
-          Ciudad
-        </button>
-        <button
-          mat-button
-          color="primary"
-          class="btn filter-button btn-sm rounded-pill text-white"
-        >
-          Sponsor
-        </button>
-        <button
-          mat-button
-          color="primary"
-          class="btn filter-button btn-sm rounded-pill text-white"
-        >
-          Todo
-        </button> -->
       </div>
     </div>
 
-    <!-- Grid de eventos -->
     <div class="row g-4">
       <div
         class="col-md-4"
@@ -145,7 +109,15 @@
               </div>
               <div class="small text-muted mb-3">{{ evento.nombre }}</div>
             </div>
-            <div class="d-flex justify-content-end">
+            <div class="d-flex justify-content-between">
+              <div>
+                <mat-icon
+                  class="star"
+                  [ngClass]="{ favorite: setFavoriteClass(evento.id) }"
+                  (click)="setFavorite(evento.id)"
+                  >favorite</mat-icon
+                >
+              </div>
               <button
                 mat-raised-button
                 class="btn custom-dark-button btn-sm align-self-start mt-auto"
